--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.6.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.21.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
